[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mongofire"
version = "0.0.1"
authors = [
  { name="PSH-TEAM", email="pshteam.developers@gmail.com" },
]
description = "A simple MongoDB python driver"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/psh-developers/mongofire"
"Bug Tracker" = "https://github.com/psh-developers/mongofire/issues"
"Documentation" = "https://mongofire.readthedocs.io"